--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
                             <!-- Enter a mission statement here or your career goals or some 
                                 other kinda blurb -->
-
-
+                                HI! 
+                                <br>
+                                My name is Nebiy Negash, and i am an aspiring web developer.
+                                I am currently Enrolled in Generation USA program and it is helping  me learn a lot.
                             </p>
                         </div>
                     </div>
@@ -44,6 +46,10 @@
                             </h5>
                             <p class="my-0 d-flex justify-content-between custom-title">
                                 <!-- Enter a title for a job, project, or education etc.-->
+                                Current Projects.
+                                <br>
+                                I have been able to successfully deploy a static website, and before that
+                                i have overcome the challenge of laying out a web page using bootstrap.
 
                                 <span class="px-1">
                                     <!-- Enter relative dates (from / to)-->
@@ -68,7 +74,7 @@
                         <!-- Change the source attribute below to link to your image you would like to show
                             This will require you to copy and paste a different image file from your file system 
                             to /assets/images/somepicfilename and it should show up -->
-                            <img src="./assets/images/File-removebg-preview.png" class="img-fluid flex-shrink-0" alt="profile">
+                            <img src="./assets/images/IMG_3464.JPG" class="img-fluid flex-shrink-0" alt="profile">
                             <p class="flex-grow-1 m-2">
                                 <!-- Enter your full name -->
 
