Refactors resume page and stylesheet

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                             </h5>
                             <p class="my-0 d-flex justify-content-between custom-title">
                                 <!-- Enter a title for a job, project, or education etc.-->
-                                Current Projects.
-                                <br>
+                               
                                 I have been able to successfully deploy a static website, and before that
                                 i have overcome the challenge of laying out a web page using bootstrap.
 
@@ -78,8 +77,8 @@
                             <p class="flex-grow-1 m-2">
                                 <!-- Enter your full name -->
 
-                                <span>
-                                    Full-Stack Engineer
+                                <span class="name">
+                                    Nebiy Negash
                                 </span>
                             </p>
                         </div>
@@ -101,7 +100,7 @@
                                 <span class="px-1"><i class="fab fa-github"></i>
                                 </span>
                                 <!-- Replace githubid both loacations below if you would like -->
-                                <a href="https://github.com/githubid">github.com/githubid</a>
+                                <a href="https://github.com/githubid">github.com/Nebiy-Negash</a>
                             </p>
                             <p class="d-flex m-1">
                                 <span class="px-1"><i class="fab fa-linkedin"></i>
